sửa HĐ thành Tài liệu

--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -1,4 +1,4 @@
-<!-- Màn điều phối hđ -->
+<!-- Màn điều phối tài liệu -->
 
 <!--<link rel="stylesheet" href="sample-contract.component.scss">-->
 <div class="sample-contract row">
