--- a/src/app/main/contract-signature/components/contract-coordination/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -1,4 +1,4 @@
-<!-- Màn điều phối HĐ -->
+<!-- Màn điều phối tài liệu -->
 
 <!-- <div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
   <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" alt="mobifone.contract111">
