--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -1010,7 +1010,7 @@
       <div>
         <!--Đối tác là tổ chức-->
         <div *ngIf="item.type == 2">
-          <!-- điều phối hđ -->
+          <!-- điều phối tài liệu -->
           <div>
             <div class="label">{{ "user.lead" | translate }}
               <span *ngIf="getPartnerCoordination(item).length > 0">
