--- a/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
+++ b/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
@@ -59,9 +59,9 @@
       <ng-template pTemplate="body" let-list let-row="rowIndex">
         <tr>
           <ng-container *ngIf="row >= 0">
-            <td>{{list.contractUId}}</td> <!--mã hđ-->
-            <td>{{list.contractNum}}</td> <!--số hđ-->
-            <td>{{list.contractName}}</td> <!--Tên HĐ-->
+            <td>{{list.contractUId}}</td> <!--mã Tài liệu-->
+            <td>{{list.contractNum}}</td> <!--số Tài liệu-->
+            <td>{{list.contractName}}</td> <!--Tên Tài liệu-->
             <td>{{list.email}}</td> <!--Email-->
             <td style="text-align: center; ">
               <img ngbTooltip="{{'content' | translate}}" src="../../../assets/img/icon_file_sms.svg" width="20px"
