--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign-v2/image-dialog-sign-v2.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign-v2/image-dialog-sign-v2.component.html
@@ -6,11 +6,12 @@
   <div class="content">
     <div class="name-item">
       <div style="justify-content: space-evenly;" class="confirm-radio d-flex mx-4">
-        <div class="radio-confirm">
-          <label [ngClass]="typeImageSignatureRadio == '1' ? 'text-primary' : 'text-inactive'" class="checkbox" for="radio-file-account">
-            <input id="radio-file-account" type="radio" name="choose-radio-signature" [value]="1" [(ngModel)]='typeImageSignatureRadio' (change)="t(1)">
+        <div *ngIf="!this.data.mark" class="radio-confirm">
+          <label [ngClass]="typeImageSignatureRadio == '3' ? 'text-primary' : 'text-inactive'" class="checkbox" for="radio-img-draw">
+            <input id="radio-img-draw" type="radio" name='choose-radio-signature' [value]="3"
+                   [(ngModel)]='typeImageSignatureRadio' (change)="t(3)">
             <span class="checkmark"></span>
-            Ảnh từ tài khoản
+            Vẽ tay chữ ký
           </label>
         </div>
         <div class="radio-confirm">
@@ -20,12 +21,11 @@
             Tải ảnh lên
           </label>
         </div>
-        <div *ngIf="!this.data.mark" class="radio-confirm">
-          <label [ngClass]="typeImageSignatureRadio == '3' ? 'text-primary' : 'text-inactive'" class="checkbox" for="radio-img-draw">
-            <input id="radio-img-draw" type="radio" name='choose-radio-signature' [value]="3"
-                   [(ngModel)]='typeImageSignatureRadio' (change)="t(3)">
+        <div class="radio-confirm">
+          <label [ngClass]="typeImageSignatureRadio == '1' ? 'text-primary' : 'text-inactive'" class="checkbox" for="radio-file-account">
+            <input id="radio-file-account" type="radio" name="choose-radio-signature" [value]="1" [(ngModel)]='typeImageSignatureRadio' (change)="t(1)">
             <span class="checkmark"></span>
-            Ký bằng hình vẽ tay
+            Ảnh từ tài khoản
           </label>
         </div>
       </div>
