--- a/src/app/main/contract-signature/dialog/filter-list-dialog/filter-list-dialog.component.html
+++ b/src/app/main/contract-signature/dialog/filter-list-dialog/filter-list-dialog.component.html
@@ -46,24 +46,31 @@
             </div>
         </div>
 
-        <div class="row" *ngIf="this.data.status != 'wait-processing' && this.data.status != 'share' && this.data.status != 'wait-processing-dashboard'">
-            <div class="col-md-6">
-                <div class="label text-color">{{'contract.status.v2' | translate}}</div>
-                <!--Chờ xử lý-->
-                <div>
-                    <p-dropdown 
-                        panelStyleClass="font"
-                        formControlName="contractStatus"
-                        appendTo="body"
-                        [options]="(this.router.url.includes('processed')) ? contractStatusProcessedList: contractStatusProcessingList" 
-                        optionLabel="name"
-                        optionValue="id" 
-                        placeholder="{{'contract.status.v2' | translate}}" 
-                        [showClear]="true"  
-                    ></p-dropdown>
-                </div>
+        <div class="row" style="padding-top: 10px;">
+          <div class="col-md-6" *ngIf="this.data.status != 'wait-processing' && this.data.status != 'share' && this.data.status != 'wait-processing-dashboard'">
+              <div class="label text-color">{{'contract.status.v2' | translate}}</div>
+              <!--Chờ xử lý-->
+              <div>
+                  <p-dropdown 
+                      panelStyleClass="font"
+                      formControlName="contractStatus"
+                      appendTo="body"
+                      [options]="(this.router.url.includes('processed')) ? contractStatusProcessedList: contractStatusProcessingList" 
+                      optionLabel="name"
+                      optionValue="id" 
+                      placeholder="{{'contract.status.v2' | translate}}" 
+                      [showClear]="true"  
+                  ></p-dropdown>
+              </div>
+          </div>
+          
+          <div class="col-md-6">
+            <div class="label text-color">{{'name.email.create.contract' | translate}}</div>
+            <div class="input-data">
+                <input type="text" formControlName="name_or_email_customer">
             </div>
-        </div>
+          </div>
+      </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
