--- a/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
+++ b/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
@@ -14,7 +14,7 @@
             </div>
             <div class="row mt-12px">
               <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'contract.uid' | translate}}:</div>
-              <div class="custom-xl-width-col-xl-9 col-lg-12 info-contract mt-lg-5px">{{datas?.is_data_contract?.contract_uid}}</div>
+              <div class="custom-xl-width-col-xl-9 col-lg-12 info-contract mt-lg-5px">{{datas?.is_data_contract?.code}}</div>
             </div>
             <div class="row mt-12px">
               <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'menu.contract.type.list' | translate}}:</div>
