sửa text thêm người ký bị nhầm thành người xem xét

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -1880,7 +1880,7 @@
                   <img class="add-icon" src="assets/img/add-square.png" alt="thêm" />
                 </div>
 
-                <u class="text-color">{{ "btn.add.user.view" | translate}}</u>
+                <u class="text-color">{{ "btn.add.user.sign" | translate}}</u>
               </div>
             </div>
           </div>
