--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -1469,7 +1469,7 @@
                   <img class="add-icon" src="assets/img/add-square.png" alt="thêm" />
                 </div>
 
-                <u class="text-color">{{ "btn.add.user.view" | translate}}</u>
+                <u class="text-color">{{ "btn.add.user.sign" | translate}}</u>
               </div>
             </div>
             <!-- <div class="participants--add">
