--- a/src/app/main/contract-signature/components/consider-contract/remote-dialog-sign/remote-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/remote-dialog-sign/remote-dialog-sign.component.html
@@ -8,7 +8,7 @@
         <div class="label text-color">Nhà cung cấp <span class="required-title">*</span></div>
         <select formControlName="supplier" class="form-select-custom" style="font-size: 14px" aria-label="Default select example">
           <option value="1">VNPT SmartCA</option>
-          <option value="2" >CA2 Nacencomm</option>
+          <option value="2" >MobiCA</option>
         </select>
       </div>
     </div>
@@ -41,7 +41,7 @@
         <div class="label text-color">Nhà cung cấp <span class="required-title">*</span></div>
         <select formControlName="supplier" class="form-select-custom" style="font-size: 14px" aria-label="Default select example">
           <option value="1">VNPT SmartCA</option>
-          <option value="2" >CA2 Nacencomm</option>
+          <option value="2" >MobiCA</option>
         </select>
       </div>
     </div>
