--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -1866,7 +1866,7 @@
                   <u class="text-color" (click)="addPartnerSignature(item, id)">{{"btn.add.user.sign" | translate}}</u>
                 </div>
 
-                <div *ngIf="getPartnerSignature(item).length > 1"
+                <div *ngIf="getPartnerSignature(item).length > 1 || getPartnerCoordination(item).length > 0"
                   class="delete-element" (click)="deletePartnerSignature(index, item)">
                   {{ "btn.add.user.delete" | translate }}
                 </div>
