Gộp button ủy quyền/chuyển tiếp

--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -143,7 +143,7 @@
       <button
         style="width: fit-content;"
         class="dx-button-form dx-button-submit dx-button-90"
-        type="default">{{this.datas.is_content == 'forward_contract' ? ('forward' | translate) : 'authorization' | translate}}
+        type="default">{{this.datas.is_content == 'forward_contract' ? ('authori_forward' | translate) : 'authori_forward' | translate}}
       </button>
     </div>
   </form>
