--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -1,11 +1,11 @@
 <div [ngStyle]="{'width': this.datas.hideInfo == true ? '99%' : '73.5%'}" class="footer-contract" *ngIf="this.datas.is_data_contract.status == 20 && this.datas.is_data_contract.release_state == 'CON_HIEU_LUC' && this.mobile === false">
   <div class="btn_footer">
     <div class="label">
-      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next action-button" (click)="processingAuthorization()">{{'authorization' | translate}}</button>
-      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'forward' | translate}}</button>
+      <button *ngIf="!this.is_show_coordination && !view" type="button" name="next" class="next action-button-both" (click)="processingAuthorization()">{{'authori_forward' | translate}}</button>
+      <!-- <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'forward' | translate}}</button> -->
 
-      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next action-button" (click)="processingAuthorization()">{{'Uỷ quyền' | translate}}</button>
-      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'Chuyển tiếp' | translate}}</button>
+      <!-- <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next action-button" (click)="processingAuthorization()">{{'Uỷ quyền' | translate}}</button>
+      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'Chuyển tiếp' | translate}}</button> -->
     </div>
 
     <a *ngIf = "this.datas.showPage != false" style="text-align: center; margin-top: 5px;">
@@ -48,15 +48,15 @@
       <div>
         <button *ngIf="!this.is_show_coordination && !view && this.lang == 'vi' || !this.lang" (click)="action()" type="button" name="next" class="next action-button" [ngStyle]="getStyleButton()">{{this.datas.action_title == 'dieu_phoi' ? 'Điều phối' : 'Xác nhận'}}</button>
       </div>
-      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="processingAuthorization()">{{'Uỷ quyền' | translate}}</button>
-      <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="forWardContract()">{{'Chuyển tiếp' | translate}}</button>
+      <button *ngIf="!this.is_show_coordination && !view " type="button" name="next" class="next forward-btn-mobile" (click)="processingAuthorization()">{{'authori_forward' | translate}}</button>
+      <!-- <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="forWardContract()">{{'Chuyển tiếp' | translate}}</button> -->
 
       <!-- ========================================== -->
       <div>
         <button *ngIf="!this.is_show_coordination && !view && this.lang == 'en'" (click)="action()" type="button" name="next" class="next action-button" [ngStyle]="getStyleButton()">{{this.datas.action_title == 'dieu_phoi' ? 'Coordinator' : 'confirm' | translate}}</button>
       </div>
-      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="processingAuthorization()">{{'authorization' | translate}}</button>
-      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="forWardContract()">{{'forward' | translate}}</button>
+      <!-- <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="processingAuthorization()">{{'authorization' | translate}}</button>
+      <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next forward-btn-mobile" (click)="forWardContract()">{{'forward' | translate}}</button> -->
       
       <button *ngIf="!this.is_show_coordination && ![2,3,4].includes(this.datas.roleContractReceived) && !view" type="button" name="next" class="next action-button-previous" (click)="refuseContract()" [ngStyle]="getStyleButton()">{{'contract.status.fail' | translate}}</button>
 
