--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -167,6 +167,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                          <div class="col-md-12">
+                            <div style="padding-top: 10px;">
+                              <input type="checkbox" value="is_show_phone_pki" formControlName="is_show_phone_pki"/>
+                              <span style="margin-left: 2%; font-size: 15px; color:#00186D; font-weight: 500">{{'confirm.public.phone.pki' | translate}}</span>
+                            </div>
+                          </div>
+                        </div>
                     </div>
                 </div>
 
