sửa phần điều kiện khi checkbox và nhập text search để 1s mới auto search

--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -626,7 +626,7 @@
         <div class="row list_header" *ngIf="pageTotal > 0">
           <div class="col-sm-5 bg-header">
             <div *ngIf="this.typeDisplay === 'signMany'" class="col-sm-1" style="text-align: left;">
-              <input id="all" name="all" type="checkbox" (click)="toggle()" (change)="checkSignType()" style="width: 16px; height: 16px; margin: -2px;"/>
+              <input id="all" name="all" type="checkbox" (click)="toggle()" style="width: 16px; height: 16px; margin: -2px;"/>
             </div>
             <div class="col-sm-11">{{'contract.process' | translate}}</div>
           </div>
