--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -657,7 +657,7 @@
                     <div class="col-sm-5">
                         <div class="flex-container">
                             <div>
-                              <input style="width: 16px; height: 16px;" name="item" type="checkbox" value="{{item.contractId}}" [(ngModel)]="item.checked" (change)="checkSignType()" [disabled]="item.isDisable"/>
+                              <input style="width: 16px; height: 16px;" name="item" type="checkbox" value="{{item.contractId}}" [checked]="item.checked" (click)="toggleOne1(item, index1)"/>
                             </div>
 
                             <div class="col-md-11" style="display: flex;margin-left: 12px; cursor: pointer;">
@@ -750,7 +750,7 @@
                         <div><i class="fa fa-calendar fa_icon"></i><span *ngIf = "item.participant" class="item_date">{{item.participant.contract.sign_time | date: 'dd/MM/yyyy'}}</span></div>
                     </div>
 
-                    <div style="cursor: pointer;" class="col-sm-1 item_icon" (click)="toggleOne(item, index1)">
+                    <div style="cursor: pointer;" class="col-sm-1 item_icon" (click)="toggleOne1(item, index1)">
                         <div style="display: flex; justify-content: center;">
                             <div class="div_icon" *ngIf="item.status == 1 && item.role == 1 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
                                 <button type="button" class="btn btn-outline-dark btn_submit" (click)="openCoordinatorContract(item)">{{'contract.lead' | translate}}</button>
