Fix Lỗi không hiển thị loại ký eKYC trên màn hình tài liệu Đã xử lý

--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -186,6 +186,7 @@
                                     <span *ngIf="item.status == 2 && item.sign_type[0]?.id == 7" style="color: #EE7200; padding: 5px;">{{'signed.usb.bcy' | translate}}</span>
                                     <span *ngIf="item.status == 2 && item.sign_type[0]?.id == 8" style="color: #EE7200; padding: 5px;">{{'signed.romote.signing' | translate}}</span>
                                     <span *ngIf="item.status == 2 && item.sign_type[0]?.id == 1" style="color: #EE7200; padding: 5px;">{{'sign.image.otp' | translate}}</span>
+                                    <span *ngIf="item.status == 2 && item.sign_type[0]?.id == 5" style="color: #EE7200; padding: 5px;">{{'signed.ekyc' | translate}}</span>
                                   </div>
                                   <!-- <div *ngIf="item.ceca_push == 1">
                                     <div class="item_contract_infor">{{'contract.status.ceca' | translate}}:
