--- a/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign-multi/pki-dialog-sign-multi.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign-multi/pki-dialog-sign-multi.component.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div style="padding-top: 10px;">
-      <input type="checkbox" value="hidden_phone" [(ngModel)]="hidden_phone"/>
+      <input type="checkbox" value="is_show_phone_pki" [(ngModel)]="is_show_phone_pki"/>
       <span style="margin-left: 2%; font-size: 13px; color:#00186D; font-weight: 500">{{'confirm.public.phone.pki' | translate}}</span>
     </div>
 
