--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -21,8 +21,8 @@
                     <div *ngIf="id == null" class="input-data">
                         <input type="text" formControlName="email">
                     </div>
-                    <div *ngIf="id != null" class="input-data hidden-color">
-                        <input type="text" formControlName="email" readonly class="hidden-color">
+                    <div *ngIf="id != null" class="input-data">
+                        <input type="text" formControlName="email">
                     </div>
                     <div *ngIf="submitted && f.email.errors" class="invalid">
                         <div *ngIf="f.email.errors.required">{{'error.user.email.required' | translate}}</div>
@@ -95,17 +95,17 @@
                   <span>{{'choose.type.sign' | translate}}:</span>
                   <div style="margin-left: 10px;">
                     <!-- <input name="item" type="checkbox" formControlName="loginType" (change)="onCheckboxChange($event, 'EMAIL')" value="EMAIL" [checked]="selectedTypes.includes('EMAIL')"/> -->
-                    <input type="radio" name="confirm-radio-consider" value="EMAIL" formControlName="loginType" name="loginType">
+                    <input type="radio" name="confirm-radio-consider" value="EMAIL" formControlName="login_type" name="login_type">
                     <span> {{'typeOfSignEmail' | translate}}</span>
                   </div>
                   <div style="margin-left: 10px;">
                     <!-- <input name="item" type="checkbox" formControlName="loginType" (change)="onCheckboxChange($event, 'SDT')" value="SDT" [checked]="selectedTypes.includes('SDT')"/> -->
-                    <input type="radio" name="confirm-radio-consider" value="SDT" formControlName="loginType" name="loginType">
+                    <input type="radio" name="confirm-radio-consider" value="SDT" formControlName="login_type" name="login_type">
                     <span> {{'typeOfSignPhone' | translate}}</span>
                   </div>
                   <div style="margin-left: 10px;">
                     <!-- <input name="item" type="checkbox" formControlName="loginType" (change)="onCheckboxChange($event, 'SDT')" value="SDT" [checked]="selectedTypes.includes('SDT')"/> -->
-                    <input type="radio" name="confirm-radio-consider" value="EMAIL_AND_SDT" formControlName="loginType" name="loginType">
+                    <input type="radio" name="confirm-radio-consider" value="EMAIL_AND_SDT" formControlName="login_type" name="login_type">
                     <span> {{'type.sign.email.phone' | translate}}</span>
                   </div>
                 </div>
