thêm chức năng người xử lý đầu tiên cho phép nhập text

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -184,6 +184,12 @@
   border-radius: 5px;
 }
 
+.ck-da-keo-first-handler {
+  border: 1px solid #106DB6;
+  border-radius: 5px;
+  background-color: rgb(235, 248, 255);
+}
+
 .staff-ck-da-keo {
   border: 1px solid #92bff5;
   color: #2680eb;
