--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -189,6 +189,7 @@
                 [datas]="datas" [view]="[2,3].includes(recipient?.status)" 
                 [sign]="d"
                 [isNotTextSupport]="isNotTextSupport"
+                [firstHandler] = "firstHandler"
               >
               </app-image-sign-contract>
               <div *ngIf="this.flagFocus && d.sign_unit == 'text'" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient && !d.valueSign) ? d.recipient?.name : ''}}</div>
